﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-12-08 Marc Delisle  <lem9@users.sourceforge.net>
    * scripts/setup.php: Typos 

2005-12-08 Michal Čihař  <michal@cihar.com>
    * tbl_change.php: Fix XHTML and thus action selection behavior (bug
      #1376391).
    * lang/czech: Fix typo.
    * tbl_select.php, libraries/display_tbl.lib.php,
      tbl_properties_operations.php, tbl_indexes.php: Fix XHTML.
    * tbl_properties_export.php: Fix output before headers.
    * Documentation.html: Add commands how to setup config dir, note about
      changing permissions.
    * scripts/setup.php: Show Save and Load buttons disabled if saving not
      available.
    * libraries/Config.class.php: Refuse to load config file with world
      writable permissions, refuse to work with existing config dir.
    * lang/*, libraries/auth/config.auth.lib.php: Suggest to run setup script
      if auth with default values fails.

2005-12-08 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/tbl_move_copy.php: added PMA_table_rename()
    * tbl_properties_common.php, libraries/tbl_properties_links.inc.php:
      moved table related output after possible table changes
    * libraries/tbl_properties_table_info.inc.php:
      added some comments and made some code more readable
    * tbl_properties_operations.php:
      complete revise (xhtml output, fieldsets, forms merged)
    * tbl_rename.php: removed, deprecated by function PMA_table_rename()
    * db_search.php, libraries/common.lib.php, libraries/tbl_move_copy.php,
      pdf_schema.php: removed PMA_isInto(), deprecated by in_array()
    * libraries\mult_submits.inc.php, sql.php, tbl_addfield.php, tbl_alter.php,
      tbl_import.php, tbl_properties.php, tbl_properties_structure.php,
      tbl_properties_operations.php, tbl_properties_export.php, tbl_select.php
      tbl_relation.php: moved tbl_properties_common.php into libraries